--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- this is the image at the top and has some built in styles-->
   <div class="w3-display-container w3-animate-opacity">
     <img src="capstone_pics/architectural-design-architecture-building-2071216.jpg" alt="boat"
-      style="width:100%;min-height:400px;max-height:700px;" id="img">
+      style="width:100%;min-height:400px;max-height:700px; height: 700px" id="img">
     <div class="w3-container w3-display-bottomleft w3-margin-bottom">
     </div>
 
