--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
+  <!-- these are the links that we used to call in the css that helps put the website together and to make it look better for the website 
+    Aviation program -->
   <title>West-Mec Aviation Matinence Technology</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- black ijmage borders so that it can look cleaner -->
+  <!-- black image borders so that it can look cleaner, makes it look more together. Made in a style- the border of rgb black. -->
   <style>
     .img {
       border: 5px solid rgb(0, 0, 0);
@@ -318,7 +320,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
         }
       }
 
-      //this makes it so if you leave the picture on for to long then it sets back to normal
+      //this makes it so if you leave the picture on for to long then it sets back to normal.The lasted time that this lates for is about 
+      //10 seconds. When the image is flipped ofr each of the images then it will display the other side like a door. 
+      //It will show the persons information that has to do with the program.
       function reapear() {
         for (var i = 0; i < teachers.length; i++) {
           document.getElementById(teachers[i]).style.display = "none";
