--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   </nav>
 
   <!-- Navbar -->
-  <!-- this is the top nav bar that it formated using w3 style sheets. the nav allows jumps down the page -->
+  <!-- this is the top nav bar that it formated using w3 style sheets. the nav allows jumps down the page.
+    This is located at the top of the page above the home page. When you click on the part of the website that ypu want to go to 
+    then by clicking that it will bring you to the section thst you want. -->
   <div class="w3-top">
     <div class="w3-bar w3-theme-d2 w3-left-align">
       <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-#f7931d w3-theme-d2"
@@ -55,7 +57,10 @@
     </div>
 
     <!-- Navbar on small screens -->
-    <!-- This uses the w3 style sheets to activate when the the screen is smaller to make the nav work better -->
+    <!-- This uses the w3 style sheets to activate when the the screen is smaller to make the nav work better. 
+      So on moblie this will be more convinient.The website is built so that if you are useing a small screen then 
+      the website will shrink in size to fit perfectly to your screen. The website will still operate the same just the 
+      size will be different. -->
     <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
       <a href="#team" class="w3-bar-item w3-button">Team</a>
       <a href="#work" class="w3-bar-item w3-button">Work</a>
@@ -76,7 +81,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
     </div>
 
     <!-- Team Container -->
-    <!-- This uses the w3 style sheets to center the next part of the page-->
+    <!--  The team container is  for the instructor teachers in the Aviation prgram. This is their section of the website.
+      This uses the w3 style sheets to center the next part of the page. The Id that is going to be used will be called team.-->
     <div class="w3-container w3-padding-64 w3-center" id="team">
       <h2>Instructors</h2>
       <p>Meet the team of Aviation Matinence Technology!</p>
@@ -126,14 +132,15 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       </div>
     </div>
 
-    <!-- Work-->
+    <!-- Work row-->
     <!-- This is the next part of the site that is foramted using the w3 stylesheets -->
-    <!--  -->
+    <!-- This sort of explains to the reader of the website of what the person/ students will be doing and or learning in the aviation program. -->
     <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
       <!-- Useing the w3 style sheets this section of the page is divided into urters one for info the others for pictures -->
       <div class="w3-quarter">
         <h2>What you will be doing here</h2>
-        <!-- this is the info -->
+        <!-- this is the information that is provided telling and explaining to readers of what will be going on in the program. 
+          The duration of the program. Certificates and some awards that can be earned in the program. -->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
           nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -147,11 +154,10 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
         <div class="w3-card w3-orange">
           <img class="img" src="capstone_pics/AV_1.JPG"  style="width:100%">
           <div class="w3-container">
-           
           </div>
         </div>
       </div>
-
+      <!-- pic -->
       <div class="w3-quarter">
         <div class="w3-card w3-white">
           <img class="img" src="capstone_pics/AV_11.JPG"  style="width:100%">
@@ -160,7 +166,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           </div>
         </div>
       </div>
-
+<!-- pic -->
       <div class="w3-quarter">
         <div class="w3-card w3-white">
           <img class="img" src="capstone_pics/080418-F-1954M-906 (1).JPG"  style="width:100%">
@@ -174,6 +180,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
 
     <!-- Container -->
     <!-- This is the + sign that when clicked opens the side nav that was created above -->
+    <!-- in the side nav when you click the plus (+) sign what will pop up is extra documents and information that gives the 
+      user some extra useful information for the west-mec aviation program, the ability to apply for the program and some more information of west-mec itself. -->
     <div class="w3-container" style="position:relative">
       <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-orange"
         style="position:absolute;top:-28px;right:24px">+</a>
@@ -217,7 +225,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
             Glendale, AZ 85307</p>
 
           <p><i class="fa fa-phone w3-text-orange w3-xlarge"></i> <b>623-209-8070</b></p>
-          <!-- This is an iframe holding a conection to google maps at the west mec central campus -->
+          <!-- This is an iframe holding a conection to google maps at the west mec central campus. 
+            The src of the link for the maps. THe user of the little map provided, you are able to see it fullscreen (optional) 
+            the map is made to be a sprecific size so that it fits in the container. With the map you can zoom in and see how to get there and such. It is linked with google maps.-->
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.6720330141225!2d-112.29502618479842!3d33.53591168074957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b41030b775f07%3A0xca01072481b6137d!2s6997+N+Glen+Harbor+Blvd%2C+Glendale%2C+AZ+85307!5e0!3m2!1sen!2sus!4v1554757023961!5m2!1sen!2sus"
             width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
