--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <!-- this is the top nav bar that it formated using w3 style sheets. the nav allows jumps down the page -->
   <div class="w3-top">
     <div class="w3-bar w3-theme-d2 w3-left-align">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-#f7931d w3-theme-d2"
-        href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right  w3-theme-d2" href="javascript:void(0);"
+        onclick="openNav()"><i class="fa fa-bars"></i></a>
       <a href="#" class="w3-bar-item w3-button w3-orange"><i class="fa fa-home w3-margin-right"></i>Home</a>
-      <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Team</a>
-      <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Work</a>
-      <a href="#ctso" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">CTSO</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-#f7931d">Contact</a>
+      <a href="#team" class="w3-bar-item w3-button w3-hide-small ">Team</a>
+      <a href="#work" class="w3-bar-item w3-button w3-hide-small ">Work</a>
+      <a href="#ctso" class="w3-bar-item w3-button w3-hide-small ">CTSO</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-hide-small ">Contact</a>
     </div>
 
     <!-- Navbar on small screens -->
