program teacher emails

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img id="jayPic" src="capstone_pics/Jay McDowell.jpg" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="jayTitle">Jay McDowell</h3>
-          <p style="display: none" id="jay">Jay McDowell teaches _______</p>
+          <p style="display: none" id="jay">Jay McDowell teaches _______. <a href="Jay.McDowell@west-mec.org">Jay.McDowell@west-mec.org</a></p>
         </div>
 <!-- teacher picture of Matthew saying his/her name and showing a piture of with the time interval design, that when you click on the image 
   the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
@@ -106,7 +106,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Matthew Still.jpg" id="matthewPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="matthewTitle">Matthew Still</h3>
-          <p style="display: none" id="matthew">Matthew Still teaches _______</p>
+          <p style="display: none" id="matthew">Matthew Still teaches _______. <a href="matthew.still@west-mec.orgg">matthew.still@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Tama saying his/her name and showing a piture of with the time interval design, that when you click on the image 
         the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
@@ -116,7 +116,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Tama Mohelnitzky.jpg" id="tamaPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="tamaTitle">Tama Mohelnitzky</h3>
-          <p style="display: none" id="tama">Tama Mohelnitzky teaches _______</p>
+          <p style="display: none" id="tama">Tama Mohelnitzky teaches _______. <a href="tama.mohelnitzky@west-mec.org">tama.mohelnitzky@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Terry Menees saying his/her name and showing a piture of with the time interval design, that when you click on the image 
         the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
@@ -126,7 +126,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Terry Menees.jpg" id="terryPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="terryTitle">Terry Menees</h3>
-          <p style="display: none" id="terry">Terry Menees teaches _________</p>
+          <p style="display: none" id="terry">Terry Menees teaches _________. <a href="Terry.Menees@west-mec.org">Terry.Menees@west-mec.org</a></p>
         </div>
 
       </div>
@@ -233,7 +233,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
             width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 
         </div>
-        <!-- This is the form section of the contact page you can input your name, email, and your message. The form doesn't acttully send the info anywhere though, just for the effect, design-->
+        <!-- This is the form section of the contact page you can input your name, email, and your message. 
+          The form doesn't acttully send the info anywhere though, just for the effect, design-->
         <div class="w3-col m7">
           <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
             <div class="w3-section">
