--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   width and height and the size. These styles are required for the picture to fit perfectly, so that it doesnt look stretched or too oversized.So that 
 it isnt blurry. It has a max and min height so that if the image isnt the exact size then it will go to those max capacities which would be 400px for min and 700px for the max height.-->
   <div class="w3-display-container w3-animate-opacity">
-    <img class="img" src="capstone_pics/architectural-design-architecture-building-2071216.jpg" 
+    <img class="img" src="capstone_pics/architectural-design-architecture-building-2071216.jpg"
       style="width:100%;min-height:400px;max-height:700px; height: 700px" id="img">
     <div class="w3-container w3-display-bottomleft w3-margin-bottom">
     </div>
@@ -96,9 +96,10 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img id="jayPic" src="capstone_pics/Jay McDowell.jpg" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="jayTitle">Jay McDowell</h3>
-          <p style="display: none" id="jay">Jay McDowell teaches _______. <a href="Jay.McDowell@west-mec.org">Jay.McDowell@west-mec.org</a></p>
+          <p style="display: none" id="jay">Jay McDowell teaches _______. <a
+              href="Jay.McDowell@west-mec.org">Jay.McDowell@west-mec.org</a></p>
         </div>
-<!-- teacher picture of Matthew saying his/her name and showing a piture of with the time interval design, that when you click on the image 
+        <!-- teacher picture of Matthew saying his/her name and showing a piture of with the time interval design, that when you click on the image 
   the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
   specific job the person teaches at the Aviation program. The persons email will be included in the time interval feature but if his/her email isnt 
   able to be retrieved then the west-mec email will be put inplace. THe email and or the west-mec phone number-->
@@ -106,7 +107,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Matthew Still.jpg" id="matthewPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="matthewTitle">Matthew Still</h3>
-          <p style="display: none" id="matthew">Matthew Still teaches _______. <a href="matthew.still@west-mec.orgg">matthew.still@west-mec.org</a></p>
+          <p style="display: none" id="matthew">Matthew Still teaches _______. <a
+              href="matthew.still@west-mec.orgg">matthew.still@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Tama saying his/her name and showing a piture of with the time interval design, that when you click on the image 
         the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
@@ -116,7 +118,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Tama Mohelnitzky.jpg" id="tamaPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="tamaTitle">Tama Mohelnitzky</h3>
-          <p style="display: none" id="tama">Tama Mohelnitzky teaches _______. <a href="tama.mohelnitzky@west-mec.org">tama.mohelnitzky@west-mec.org</a></p>
+          <p style="display: none" id="tama">Tama Mohelnitzky teaches _______. <a
+              href="tama.mohelnitzky@west-mec.org">tama.mohelnitzky@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Terry Menees saying his/her name and showing a piture of with the time interval design, that when you click on the image 
         the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
@@ -126,7 +129,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           <img src="capstone_pics/Terry Menees.jpg" id="terryPic" alt="Boss" style="width:45%"
             class="w3-circle w3-hover-opacity img">
           <h3 id="terryTitle">Terry Menees</h3>
-          <p style="display: none" id="terry">Terry Menees teaches _________. <a href="Terry.Menees@west-mec.org">Terry.Menees@west-mec.org</a></p>
+          <p style="display: none" id="terry">Terry Menees teaches _________. <a
+              href="Terry.Menees@west-mec.org">Terry.Menees@west-mec.org</a></p>
         </div>
 
       </div>
@@ -152,7 +156,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       <!-- these are the pictures they have inline styles and use the w3 style sheets they also have the possibliltiy to have captions-->
       <div class="w3-quarter">
         <div class="w3-card w3-orange">
-          <img class="img" src="capstone_pics/AV_1.JPG"  style="width:100%">
+          <img class="img" src="capstone_pics/AV_1.JPG" style="width:100%">
           <div class="w3-container">
           </div>
         </div>
@@ -160,18 +164,18 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       <!-- pic -->
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img class="img" src="capstone_pics/AV_11.JPG"  style="width:100%">
+          <img class="img" src="capstone_pics/AV_11.JPG" style="width:100%">
           <div class="w3-container">
-         
+
           </div>
         </div>
       </div>
-<!-- pic -->
+      <!-- pic -->
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img class="img" src="capstone_pics/080418-F-1954M-906 (1).JPG"  style="width:100%">
+          <img class="img" src="capstone_pics/080418-F-1954M-906 (1).JPG" style="width:100%">
           <div class="w3-container">
-           
+
           </div>
         </div>
       </div>
@@ -257,7 +261,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       </div>
     </div>
 
-  
+
 
     <!-- Footer -->
     <!-- this is the footer It has links to several social media -->
@@ -282,7 +286,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
     </footer>
     <!-- this is the script for the javascript file. The src is calling the file,so that the code done in the js file will mesh with the 
       //html.it is being called in async. -->
-  <script src="custom.js" async></script>
+    <script src="custom.js" async></script>
 </body>
 
 </html>
